# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: __init__.py  gendiff.py  makediff.py
gendiff/formatters/: json.py  stylish.py
gendiff/scripts/: formatter.py  gendiff.py  main.py  parser.py
gendiff/scripts/formatters/: plain.py  stylish.py
tests/: test_formatter.py  test_gendiff.py  test_gendiff_json.py  test_gendiff_tree_json.py  test_gendiff_tree_yaml.py  test_gendiff_yaml.py  test_json.py  test_makediff.py  test_plain.py  test_stylish.py  test_to_plain.py  test_to_stylish.py
